# fm.engine.wasm

./: .gitignore  fm.engine.code-workspace  fm.engine.wasm.code-workspace  make.sh  readme.md
apps/hmi/: CMakeLists.txt  make.sh
apps/hmi/assets/: Jumping.fbx  monkey3.mtl
apps/hmi/assets/shaders/: forward-point-gles.fs
apps/hmi/html/: gtag.js  index.html
apps/hmi/src/: coolGame.cpp  coolGame.h  main.cpp  mainGame.cpp  mainGame.h  mainGameExpand.cpp  testGame.cpp  testGame.h
apps/hmi/src/http/: fmFetch.h
apps/hmi/src/test/: test.cpp  test.h
engine.core/: CMakeLists.txt
engine.core/dependencies/: CMakeLists.txt
engine.core/dependencies/SDL/build-scripts/: install-sh
engine.core/dependencies/assimp/: CMakeLists.txt
engine.core/dependencies/assimp/code/: CMakeLists.txt  DefaultIOStream.cpp  FBXBinaryTokenizer.cpp  FBXImporter.cpp  Importer.cpp
engine.core/dependencies/assimp/include/assimp/: Importer.hpp  config.h
engine.core/dependencies/bullet3/: BulletConfig.cmake  bullet.pc
engine.core/dependencies/imgui/: imgui.h
engine.core/scripts/: cmake-emscripten.sh
engine.core/src/: CMakeLists.txt
engine.core/src/engine/: Asset.cpp  Asset.h  CMakeLists.txt  Component.cpp  Component.h  CustomIOStream.cpp  CustomIOStream.h  CustomIOSystem.cpp  CustomIOSystem.h  Engine.cpp  Engine.h  EngineIOStream.cpp  EngineIOStream.h  Entity.cpp  Entity.h  GLEWManager.cpp  GLManager.h  Game.cpp  Game.h  GuiManager.cpp  GuiManager.h  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Shader.cpp  Texture.cpp  Texture.h  Window.cpp  Window.h  fmFetch.h
engine.core/src/engine/components/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  FreeLook.cpp  FreeLook.h  FreeMove.cpp  FreeMove.h  MeshRenderer.cpp  MeshRenderer.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  SpotLight.h
engine.core/src/engine/fm/: fmFetch.h  uuid_generate.h  wasm_minizip.h
